# cppProject

./: .gitignore
Conan_CMAKE_Example/: conanfile.py
Conan_CMAKE_Example/app/: main.cpp
Conan_CMAKE_Example/src/: md5.cpp
CppSocketServer/: .gitignore  CMakeLists.txt  Time.h  build.bat  conanfile.py  fileinit.cpp  fileinit.h  listen_cmd_server.cpp  listen_cmd_server_cfg.json  radixsort.cpp  radixsort.h  readme.md  threadForCout.cpp
CppSocketServer/BridgeMode/: Abstraction.cpp  Abstraction.h  CMakeLists.txt
CppSocketServer/BuilderMode/: BuilderDirector.cpp  BuilderMode.cpp  BuilderMode.h  CMakeLists.txt
CppSocketServer/ProtoTypeMode/: CMakeLists.txt  ProtoType.h
CppSocketServer/Singleton/: CMakeLists.txt  Singleton.cpp
CppSocketServer/app/: MainSFML.cpp  WebSocketClient.cpp  WebSocketMain.cpp  main.cpp
CppSocketServer/cfg/: config.txt  cout.bat  listen_cmd_server_cfg.json
CppSocketServer/factoryMode/: CMakeLists.txt  Factory.cpp  Factory.h  Product.cpp  Product.h
CppSocketServer/include/: fileinit.h  threadForCout.h
CppSocketServer/src/: fileinit.cpp  fileinit.h  radixsort.cpp  socket.cpp  socket.h  threadForCout.cpp  threadForCout.h
CppSocketServer/src/AdapterMode/: Adapter.cpp  Adapter.h
CppSocketServer/src/BridgeMode/: AbstractionImp.cpp  AbstractionImp.h
CppSocketServer/src/BuilderMode/: BuilderDirector.cpp  BuilderDirector.h  BuilderProduct.cpp  BuilderProduct.h
CppSocketServer/src/CompositeMode/: Composite.h
CppSocketServer/src/DecoratorMode/: Decorator.cpp  Decorator.h
CppSocketServer/src/MediatorMode/: Colleage.cpp  Colleage.h  Mediator.cpp  Mediator.h
CppSocketServer/src/MementoMode/: Memento.cpp  Memento.h
CppSocketServer/src/Msg/: Msg.cpp  Msg.h
CppSocketServer/src/ObjectThing/: Draggable.h  DraggableCircle.h  DraggableCircle2.h  DraggableRectangle.h
CppSocketServer/src/ObserverMode/: Observer.cpp  Observer.h  SubjectB.cpp  SubjectB.h
CppSocketServer/src/ProtoTypeMode/: ProtoType.cpp
CppSocketServer/src/ProxyMode/: Proxy.h
CppSocketServer/src/SingletonMode/: Singleton.h
CppSocketServer/src/ThreadMgr/: ModuleThreadMgr.cpp  ModuleThreadMgr.h
CppSocketServer/src/facadeMode/: Facade.h
CppSocketServer/src/test/: unit_test3.cpp  unit_test4.cpp
CppSocketServer/test/: main.cpp  test_calculator.cpp  unit_test.cpp  unit_test10.cpp  unit_test2.cpp  unit_test3.cpp  unit_test4.cpp  unit_test5.cpp  unit_test6.cpp  unit_test7.cpp  unit_test8.cpp  unit_test9.cpp
CppSocketServer/test2/: main.cpp  unit_test.cpp  unit_testA1.cpp
